--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zlcp.eyas",
+  "name": "zxl.react-webpack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://gitlab.zhaopin.com.cn/ceping/zlcp.eyas.git"
+    "url": "https://github.com/xianlong1226/react-webpack.git"
   },
   "author": "",
   "license": "ISC",
@@ -35,18 +35,15 @@
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
-    "gulp-command-task": "^0.1.1",
     "gulp-util": "^3.0.7",
     "html-loader": "^0.4.3",
     "imports-loader": "^0.6.5",
-    "install": "^0.8.4",
     "iscroll": "^5.2.0",
     "jquery": "^1.12.4",
     "js-cookie": "^2.1.3",
     "json-loader": "^0.5.4",
     "moment": "^2.17.0",
     "node-sass": "^4.2.0",
-    "npm": "^4.0.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "resolve-url-loader": "^1.4.3",
