--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-util": "^3.0.7",
     "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.6.5",
     "iscroll": "^5.2.0",
     "jquery": "^1.12.4",
